--- a/index.html
+++ b/index.html
@@ -224,33 +224,22 @@
                     <span
                         class="absolute -left-[41px] top-0 w-5 h-5 rounded-full bg-cyan-500 shadow-[0_0_10px_rgba(6,182,212,0.5)]"></span>
                     <h3 class="text-cyan-400 font-bold text-xl mb-2">2026</h3>
-                    <h4 class="text-white text-lg font-semibold mb-2" data-i18n="hist_2026_title">Expansion to Indonesia
-                    </h4>
-                    <p class="text-slate-400" data-i18n="hist_2026_desc">Launched AI Chip education curriculum &
-                        established Jakarta partnership office.</p>
-                </div>
-                <div class="relative">
-                    <span
-                        class="absolute -left-[41px] top-0 w-5 h-5 rounded-full bg-[#112240] border-2 border-slate-500"></span>
-                    <h3 class="text-slate-300 font-bold text-xl mb-4">2025</h3>
-                    <h4 class="text-white text-lg font-semibold mb-2" data-i18n="hist_2025_title">KERON GLOBAL
+                    <h4 class="text-white text-lg font-semibold mb-2" data-i18n="hist_2026_title">KERON GLOBAL
                         Establishment</h4>
-                    <p class="text-slate-400 mb-4" data-i18n="hist_2025_desc">Founded with a vision to connect global
+                    <p class="text-slate-400 mb-2" data-i18n="hist_2026_desc">Founded with a vision to connect global
                         education and future technology.</p>
-                    <ul class="space-y-2 text-slate-400 text-sm leading-relaxed">
-                        <li data-i18n="hist_2025_01"><span class="text-cyan-400 font-bold mr-2">'25.01</span> Official
-                            Exclusive Import Agreement with Indonesian Palm & Coconut Oil 'Pt.Bona Oil Ltd'</li>
-                    </ul>
                 </div>
 
                 <!-- Added Entry -->
                 <div class="relative">
                     <span
                         class="absolute -left-[41px] top-0 w-5 h-5 rounded-full bg-[#112240] border-2 border-cyan-500/50"></span>
-                    <h3 class="text-slate-300 font-bold text-xl mb-4">2020 - 2024</h3>
+                    <h3 class="text-slate-300 font-bold text-xl mb-4">2020 ~</h3>
                     <h4 class="text-white text-lg font-semibold mb-3" data-i18n="hist_2020_title">Innovation & Growth
                     </h4>
                     <ul class="space-y-2 text-slate-400 text-sm leading-relaxed">
+                        <li data-i18n="hist_2025_01"><span class="text-cyan-400 font-bold mr-2">'25.01</span> Official
+                            Exclusive Import Agreement with Indonesian Palm & Coconut Oil 'Pt.Bona Oil Ltd'</li>
                         <li data-i18n="hist_2024_10"><span class="text-cyan-400 font-bold mr-2">'24.10</span> Signed
                             Official Exclusive Import License for Mytimber Wood Co., Ltd.</li>
                         <li data-i18n="hist_2024_07"><span class="text-cyan-400 font-bold mr-2">'24.07</span> Launched
@@ -416,10 +405,7 @@
             <h2 class="text-2xl font-bold mb-8 text-white" data-i18n="partner_title">Trusted Global Partners</h2>
             <div
                 class="flex flex-wrap justify-center gap-8 opacity-60 grayscale hover:grayscale-0 transition-all duration-500">
-                <span class="text-2xl font-bold text-slate-400">GOOGLE</span>
-                <span class="text-2xl font-bold text-slate-400">MICROSOFT</span>
-                <span class="text-2xl font-bold text-slate-400">TENSORFLOW</span>
-                <span class="text-2xl font-bold text-slate-400">NVIDIA</span>
+                <span class="text-3xl font-bold text-slate-400">AIU AI TECH</span>
             </div>
         </div>
     </section>
@@ -462,12 +448,12 @@
                 ceo_desc: "\"Based on 15 years of experience in North America and Oceania, I present a real career roadmap beyond simple education. KERON GLOBAL will be a solid bridge connecting Korea and Indonesia through AI technology education and global talent fostering.\"",
 
                 history_title: "Our Journey",
-                hist_2026_title: "Expansion to Indonesia",
-                hist_2026_desc: "Launched AI Chip education curriculum & established Jakarta partnership office.",
+                hist_2026_title: "KERON GLOBAL Establishment",
+                hist_2026_desc: "Founded with a vision to connect global education and future technology.",
                 hist_2025_title: "KERON GLOBAL Establishment",
                 hist_2025_desc: "Founded with a vision to connect global education and future technology.",
                 hist_2025_01: "<span class='text-cyan-400 font-bold mr-2'>'25.01</span> Official Exclusive Import Agreement with Indonesian Palm & Coconut Oil 'Pt.Bona Oil Ltd'",
-                hist_2020_title: "Innovation & Growth",
+                hist_2020_title: "Innovation & Growth (Kangseo Mulsan)",
                 hist_2024_10: "<span class='text-cyan-400 font-bold mr-2'>'24.10</span> Signed Official Exclusive Import License for Mytimber Wood Co., Ltd.",
                 hist_2024_07: "<span class='text-cyan-400 font-bold mr-2'>'24.07</span> Launched 'Misanli Gamasot 1995' & Signed Lotte Home Shopping Agreement",
                 hist_2023_11: "<span class='text-cyan-400 font-bold mr-2'>'23.11</span> Established Undo Foods (Food Distribution)",
@@ -525,12 +511,12 @@
                 ceo_desc: "\"15년간의 북미와 오세아니아 현지 경험을 바탕으로, 단순한 교육을 넘어 실질적인 커리어 로드맵을 제시합니다. 케론글로벌은 AI 기술 교육과 글로벌 인재 양성을 통해 한국과 인도네시아를 잇는 든든한 가교가 되겠습니다.\"",
 
                 history_title: "우리의 여정",
-                hist_2026_title: "인도네시아 진출",
-                hist_2026_desc: "AI 반도체 교육 커리큘럼 런칭 및 자카르타 파트너십 오피스 설립",
+                hist_2026_title: "케론글로벌 설립",
+                hist_2026_desc: "글로벌 교육과 미래 기술을 연결한다는 비전으로 설립",
                 hist_2025_title: "케론글로벌 설립",
                 hist_2025_desc: "글로벌 교육과 미래 기술을 연결한다는 비전으로 설립",
                 hist_2025_01: "<span class='text-cyan-400 font-bold mr-2'>'25.01</span> 인도네시아 팜&코코넛오일 'Pt.Bona Oil Ltd' 공식 독점 수입원 체결",
-                hist_2020_title: "혁신과 성장 (강서코퍼레이션)",
+                hist_2020_title: "혁신과 성장 (강서물산)",
                 hist_2024_10: "<span class='text-cyan-400 font-bold mr-2'>'24.10</span> 목재부문 Mytimber 목재유한회사 공식 독점 수입 라이센스 체결",
                 hist_2024_07: "<span class='text-cyan-400 font-bold mr-2'>'24.07</span> 식품업 '미산리가마솥1995' 런칭​ 및 홈쇼핑 협약(롯데)",
                 hist_2023_11: "<span class='text-cyan-400 font-bold mr-2'>'23.11</span> 운도식품 설립(식품 유통기업)",
