--- a/index.html
+++ b/index.html
@@ -185,25 +185,29 @@
                         KERON GLOBAL은 AI 기술 교육과 글로벌 인재 양성을 통해 한국과 인도네시아를 잇는 든든한 가교가 되겠습니다."
                     </p>
 
-                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                        <div class="p-4 rounded-lg bg-white/5 border border-white/10 flex items-center space-x-3">
-                            <div
-                                class="w-10 h-10 rounded-full bg-blue-900/50 flex items-center justify-center text-blue-400">
-                                <span class="font-bold text-xs">USA</span>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-8">
+                        <!-- USA -->
+                        <div
+                            class="p-6 rounded-xl bg-white/5 border border-white/10 hover:border-blue-500/30 transition-colors group">
+                            <div class="flex items-center mb-4">
+                                <span
+                                    class="text-xs font-bold text-white bg-blue-600 px-3 py-1 rounded-full group-hover:bg-blue-500 transition-colors">USA</span>
                             </div>
-                            <div>
-                                <p class="text-white font-semibold">Penn State Univ.</p>
-                                <p class="text-xs text-slate-500">Alumni</p>
+                            <div class="text-slate-300 text-sm space-y-2 font-light leading-relaxed"
+                                data-i18n="ceo_edu_usa">
+                                <!-- JS Content -->
                             </div>
                         </div>
-                        <div class="p-4 rounded-lg bg-white/5 border border-white/10 flex items-center space-x-3">
-                            <div
-                                class="w-10 h-10 rounded-full bg-cyan-900/50 flex items-center justify-center text-cyan-400">
-                                <span class="font-bold text-xs">NZ</span>
+                        <!-- NZ -->
+                        <div
+                            class="p-6 rounded-xl bg-white/5 border border-white/10 hover:border-cyan-500/30 transition-colors group">
+                            <div class="flex items-center mb-4">
+                                <span
+                                    class="text-xs font-bold text-black bg-cyan-400 px-3 py-1 rounded-full group-hover:bg-cyan-300 transition-colors">NZ</span>
                             </div>
-                            <div>
-                                <p class="text-white font-semibold">BBI / Macleans</p>
-                                <p class="text-xs text-slate-500">Alumni</p>
+                            <div class="text-slate-300 text-sm space-y-2 font-light leading-relaxed"
+                                data-i18n="ceo_edu_nz">
+                                <!-- JS Content -->
                             </div>
                         </div>
                     </div>
@@ -446,6 +450,8 @@
 
                 ceo_headline: "Bridging Education & Technology",
                 ceo_desc: "\"Based on 15 years of experience in North America and Oceania, I present a real career roadmap beyond simple education. KERON GLOBAL will be a solid bridge connecting Korea and Indonesia through AI technology education and global talent fostering.\"",
+                ceo_edu_usa: "<strong class='text-white block text-base mb-2'>Pennsylvania State University</strong>Bachelor of Science in Economics",
+                ceo_edu_nz: "<strong class='text-white block text-base mb-2'>Education History</strong>Buckland Beach Intermediate (Graduated)<br>Macleans College (Graduated)<br>Auckland Univ. of Technology (Withdrawal)",
 
                 history_title: "Our Journey",
                 hist_2026_title: "KERON GLOBAL Establishment",
@@ -509,6 +515,8 @@
 
                 ceo_headline: "교육과 기술을 잇는 가교",
                 ceo_desc: "\"15년간의 북미와 오세아니아 현지 경험을 바탕으로, 단순한 교육을 넘어 실질적인 커리어 로드맵을 제시합니다. 케론글로벌은 AI 기술 교육과 글로벌 인재 양성을 통해 한국과 인도네시아를 잇는 든든한 가교가 되겠습니다.\"",
+                ceo_edu_usa: "<strong class='text-white block text-base mb-2'>Pennsylvania State University 졸업</strong>Bachelor of Science in Economics",
+                ceo_edu_nz: "<strong class='text-white block text-base mb-2'>학력 사항</strong>Buckland Beach Intermediate 졸업<br>Macleans College 졸업<br>Auckland University of Technology 자퇴",
 
                 history_title: "우리의 여정",
                 hist_2026_title: "케론글로벌 설립",
