--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
     </header>
 
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
-        <div class="absolute inset-0 z-0">
-            <img src="hero_bg.png" alt="Background" class="w-full h-full object-cover opacity-40">
-        </div>
+        <video autoplay muted loop playsinline class="video-bg">
+            <source src="/hero-bg.mp4" type="video/mp4">
+        </video>
         <div class="absolute inset-0 bg-[#0A192F]/80 mix-blend-hard-light"></div>
 
         <div class="container mx-auto px-6 relative z-10">
@@ -587,6 +587,59 @@
         }
     </script>
 
+    <div id="tsparticles" class="fixed inset-0 -z-10 pointer-events-none"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
+    <script>
+        // Initialize tsparticles
+        async function loadParticles() {
+            await tsParticles.load("tsparticles", {
+                fullScreen: { enable: false },
+                background: {
+                    color: { value: "transparent" },
+                },
+                fpsLimit: 120,
+                interactivity: {
+                    events: {
+                        onClick: { enable: true, mode: "push" },
+                        onHover: { enable: true, mode: "repulse" },
+                        resize: true,
+                    },
+                    modes: {
+                        push: { quantity: 4 },
+                        repulse: { distance: 200, duration: 0.4 },
+                    },
+                },
+                particles: {
+                    color: { value: "#ffffff" },
+                    links: {
+                        color: "#ffffff",
+                        distance: 150,
+                        enable: true,
+                        opacity: 0.2, // Faint links
+                        width: 1,
+                    },
+                    move: {
+                        enable: true,
+                        speed: 1, // Slow movement
+                        direction: "none",
+                        random: false,
+                        straight: false,
+                        outModes: { default: "bounce" },
+                    },
+                    number: {
+                        density: { enable: true, area: 800 },
+                        value: 80,
+                    },
+                    opacity: { value: 0.3 },
+                    shape: { type: "circle" },
+                    size: { value: { min: 1, max: 3 } },
+                },
+                detectRetina: true,
+            });
+        }
+        loadParticles();
+    </script>
 </body>
 
 </html>
