--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
         <video autoplay muted loop playsinline class="video-bg">
-            <source src="/hero-bg.mp4" type="video/mp4">
+            <source src="hero-bg.mp4" type="video/mp4">
         </video>
         <div class="absolute inset-0 bg-[#0A192F]/80 mix-blend-hard-light"></div>
 
@@ -587,58 +587,35 @@
         }
     </script>
 
-    <div id="tsparticles" class="fixed inset-0 -z-10 pointer-events-none"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
     <script>
-        // Initialize tsparticles
-        async function loadParticles() {
+        (async () => {
             await tsParticles.load("tsparticles", {
-                fullScreen: { enable: false },
-                background: {
-                    color: { value: "transparent" },
-                },
-                fpsLimit: 120,
-                interactivity: {
-                    events: {
-                        onClick: { enable: true, mode: "push" },
-                        onHover: { enable: true, mode: "repulse" },
-                        resize: true,
-                    },
-                    modes: {
-                        push: { quantity: 4 },
-                        repulse: { distance: 200, duration: 0.4 },
-                    },
-                },
+                fullScreen: { enable: true, zIndex: -1 }, // 배경으로 고정
+                background: { color: "transparent" }, // 투명 배경
                 particles: {
+                    number: { value: 80, density: { enable: true, area: 800 } },
                     color: { value: "#ffffff" },
-                    links: {
-                        color: "#ffffff",
-                        distance: 150,
-                        enable: true,
-                        opacity: 0.2, // Faint links
-                        width: 1,
-                    },
+                    shape: { type: "circle" },
+                    opacity: { value: 0.5, random: true },
+                    size: { value: 3, random: true },
                     move: {
                         enable: true,
-                        speed: 1, // Slow movement
+                        speed: 0.5, // 별 이동 속도 (천천히)
                         direction: "none",
-                        random: false,
-                        straight: false,
-                        outModes: { default: "bounce" },
-                    },
-                    number: {
-                        density: { enable: true, area: 800 },
-                        value: 80,
-                    },
-                    opacity: { value: 0.3 },
-                    shape: { type: "circle" },
-                    size: { value: { min: 1, max: 3 } },
+                        random: true,
+                        outModes: "out"
+                    }
                 },
-                detectRetina: true,
+                interactivity: {
+                    events: {
+                        onHover: { enable: true, mode: "bubble" }, // 마우스 오버 시 커짐
+                    },
+                    modes: {
+                        bubble: { size: 6, distance: 200, duration: 2, opacity: 0.8 }
+                    }
+                }
             });
-        }
-        loadParticles();
+        })();
     </script>
 </body>
 
