--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
     </header>
 
     <section class="relative min-h-screen flex items-center justify-center pt-20 overflow-hidden text-center bg-black">
-        <video autoplay muted loop playsinline class="video-bg">
-            <source src="hero-bg.mp4" type="video/mp4">
-        </video>
+        <div class="absolute inset-0 z-0">
+            <img src="hero_bg.png" alt="Background" class="w-full h-full object-cover opacity-40">
+        </div>
         <div class="absolute inset-0 bg-[#0A192F]/80 mix-blend-hard-light"></div>
 
         <div class="container mx-auto px-6 relative z-10">
@@ -339,8 +339,15 @@
     </section>
 
     <section id="study-abroad" class="py-24 bg-[#0A192F] relative overflow-hidden">
+        <div class="absolute inset-0 z-0">
+            <video autoplay muted loop playsinline class="w-full h-full object-cover opacity-20">
+                <source src="hero-bg.mp4" type="video/mp4">
+            </video>
+            <div class="absolute inset-0 bg-[#0A192F]/90"></div>
+        </div>
+
         <div
-            class="absolute top-0 right-0 w-1/3 h-full bg-gradient-to-l from-amber-900/10 to-transparent pointer-events-none">
+            class="absolute top-0 right-0 w-1/3 h-full bg-gradient-to-l from-amber-900/10 to-transparent pointer-events-none z-10">
         </div>
 
         <div class="container mx-auto px-6 relative z-10">
