--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                             </div>
                             <div class="text-slate-300 text-sm space-y-2 font-light leading-relaxed"
                                 data-i18n="ceo_edu_usa">
-                                <!-- JS Content -->
+                                <strong class='text-white block text-base mb-2'>Pennsylvania State
+                                    University</strong>Bachelor of Science in Economics
                             </div>
                         </div>
                         <!-- NZ -->
@@ -207,7 +208,9 @@
                             </div>
                             <div class="text-slate-300 text-sm space-y-2 font-light leading-relaxed"
                                 data-i18n="ceo_edu_nz">
-                                <!-- JS Content -->
+                                <strong class='text-white block text-base mb-2'>Education History</strong>Buckland Beach
+                                Intermediate (Graduated)<br>Macleans College (Graduated)<br>Auckland Univ. of Technology
+                                (Withdrawal)
                             </div>
                         </div>
                     </div>
