update_snow effect

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
             }
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>
 </head>
 
 <body>
+    <div id="tsparticles" class="fixed inset-0 z-0 pointer-events-none"></div>
 
     <header class="fixed w-full z-50 bg-[#0A192F]/90 backdrop-blur-md border-b border-white/10 shadow-lg">
         <div class="container mx-auto px-6 h-20 flex items-center justify-between">
