--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="relative h-12 w-auto">
                     <img src="logo-transparent.png" alt="KERON GLOBAL Logo" class="h-12 w-auto object-contain" />
                 </div>
-                <div class="hidden sm:flex flex-col justify-center">
+                <div class="flex flex-col justify-center">
                     <span class="text-xl font-bold text-white leading-tight">
                         케론글로벌
                     </span>
