--- a/index.html
+++ b/index.html
@@ -123,13 +123,10 @@
                 <div class="relative h-12 w-auto">
                     <img src="logo-transparent.png" alt="KERON GLOBAL Logo" class="h-12 w-auto object-contain" />
                 </div>
-                <div class="flex flex-col justify-center">
-                    <span class="text-xl font-bold text-white leading-tight">
-                        케론글로벌
-                    </span>
-                    <span class="text-xs font-medium text-slate-400 tracking-wider">
-                        KERON GLOBAL
-                    </span>
+                <div class="flex items-center text-base">
+                    <span class="font-bold text-white">케론글로벌</span>
+                    <span class="mx-2 text-slate-500">|</span>
+                    <span class="font-medium text-slate-300 tracking-wide">KERON GLOBAL</span>
                 </div>
             </a>
             <nav
