--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
                 <div class="relative h-12 w-auto">
                     <img src="logo-transparent.png" alt="KERON GLOBAL Logo" class="h-12 w-auto object-contain" />
                 </div>
-                <div class="flex items-center text-base">
-                    <span class="font-bold text-white">케론글로벌</span>
-                    <span class="mx-2 text-slate-500">|</span>
-                    <span class="font-medium text-slate-300 tracking-wide">KERON GLOBAL</span>
+                <div class="flex flex-col md:flex-row md:items-center justify-center">
+                    <span class="font-bold text-white text-base md:text-lg leading-tight md:leading-normal">케론글로벌</span>
+                    <span class="hidden md:inline mx-2 text-slate-500">|</span>
+                    <span
+                        class="font-medium text-xs md:text-base text-slate-400 md:text-slate-300 tracking-wider md:tracking-wide">KERON
+                        GLOBAL</span>
                 </div>
             </a>
             <nav
