--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </svg>
             </button>
             <a href="#"
-                class="absolute left-1/2 transform -translate-x-1/2 md:static md:translate-x-0 md:transform-none z-50 flex items-center space-x-3">
+                class="absolute left-1/2 transform -translate-x-1/2 md:static md:translate-x-0 md:transform-none z-50 flex items-center space-x-2 md:space-x-3">
                 <div class="relative h-12 w-auto">
                     <img src="logo-transparent.png" alt="KERON GLOBAL Logo" class="h-12 w-auto object-contain" />
                 </div>
@@ -127,7 +127,7 @@
                     <span class="font-bold text-white text-base md:text-lg leading-tight md:leading-normal">케론글로벌</span>
                     <span class="hidden md:inline mx-2 text-slate-500">|</span>
                     <span
-                        class="font-medium text-xs md:text-base text-slate-400 md:text-slate-300 tracking-wider md:tracking-wide">KERON
+                        class="font-medium text-xs md:text-base text-slate-400 md:text-slate-300 tracking-wider md:tracking-wide whitespace-nowrap">KERON
                         GLOBAL</span>
                 </div>
             </a>
